Fix/job lists qa (#334)
* fix(filters): active state on filter buttons and visual bugs

* fix(navigation): flyout navigation height fix on mobile

* fix(navigation): calculate view height

* fix(navigation): remove navigation height

* fix(filters): adapt styling for dark mode and refactor height calc

* fix(filters): filter button clear all color

* fix(jobs): text teaser component overflowing

--- a/src/styles/core/_buttons.scss
+++ b/src/styles/core/_buttons.scss
@@ -20,7 +20,10 @@
 		background-color: $color-primary--beige;
 		color: $color-primary--black;
 	}
-
+	&--apply {
+		background-color: $color-primary--white;
+		color: $color-primary--black;
+	}
 	&--icon-left {
 		padding-left: 3.4rem;
 	}
